# anki

./: .dockerignore  AI_CLI.md  CLAUDE.md  CONTRIBUTORS  COPILOT.md  Cargo.toml  Dockerfile.api  Dockerfile.frontend  GEMINI.md  PHASE_2.5_COMPLETE.md  PHASE_2.6_COMPLETE.md  PHASE_3.10_COMPLETE.md  PHASE_3.4_COMPLETE.md  PHASE_3.4_IN_PROGRESS.md  PHASE_3.6_COMPLETE.md  PROJECT_LAYOUT.md  PROJECT_STATUS.md  QWEN.md  README.webapp.md  SPECIFICATIONS.md  TASKS.md  WHATS_NEW.md  build-webapp.sh  docker-compose.sh  docker-compose.yml  find-webapp-forks.sh  package.json  portainer-stack.yaml  push-webapp-docker.sh  start-webapp.sh  stop-webapp.sh  test-webapp.sh
.copilot/: user.md
.gemini/: user.md
.qwen/: user.md
config/: README.md  server.toml.example
data/: webapp.db
docs/webapp/: AI_CLI.md  CARDS_API_REFERENCE.md  CHECKLIST.md  COMPETITIVE_ANALYSIS.md  DOCKER_PLAN.md  Dockerfile  Dockerfile.api  Dockerfile.frontend  FUNCTIONALITY_GAP_ANALYSIS.md  PHASE_1_COMPLETE.md  PHASE_2.5_COMPLETE.md  PHASE_2.6_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_3.10_COMPLETE.md  PHASE_3.4_COMPLETE.md  PHASE_3.5_COMPLETE.md  PHASE_3.6_COMPLETE.md  PHASE_3.7_COMPLETE.md  PHASE_3.8_COMPLETE.md  PHASE_3.9_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_3_CONTINUATION_SUMMARY.md  PHASE_4.10_COMPLETE.md  PHASE_4.11_COMPLETE.md  PHASE_4.12_COMPLETE.md  PHASE_4.14_COMPLETE.md  PHASE_4.1_COMPLETE.md  PHASE_4.3_COMPLETE.md  PHASE_4.4_COMPLETE.md  PHASE_4.5_COMPLETE.md  PHASE_4.6_COMPLETE.md  PHASE_4.7_COMPLETE.md  PHASE_4.8_COMPLETE.md  PHASE_4.9_COMPLETE.md  PHASE_5.1_COMPLETE.md  PHASE_5.6_COMPLETE.md  PROJECT_STATUS.md  README.md  README.webapp.md  SPECIFICATIONS.md  (+6 more)
rslib/webapp/: Cargo.toml  README.md
rslib/webapp/data/: webapp.db
rslib/webapp/src/: config.rs  error.rs  lib.rs  main.rs  openapi.rs  swagger_ui.rs
rslib/webapp/src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs
rslib/webapp/src/db/: mod.rs  schema.sql  sessions.rs  users.rs
rslib/webapp/src/routes/: auth.rs  browse.rs  cards.rs  collection.rs  decks.rs  import_export.rs  media.rs  mod.rs  notes.rs  notetypes.rs  scheduler.rs  search.rs  stats.rs  tags.rs
rslib/webapp/src/server/: mod.rs  router.rs
rslib/webapp/src/session/: backend.rs  mod.rs
rslib/webapp/tests/: auth_test.rs  card_test.rs  collection_test.rs  deck_test.rs  import_test.rs  media_test.rs  note_test.rs  scheduler_test.rs  search_test.rs  stats_test.rs
rslib/webapp/tests/common/: mod.rs
ts/: tailwind.config.cjs  vite.config.ts
ts/routes/: +layout.ts
ts/src/: app.html  service-worker.js
ts/static/: manifest.webmanifest
(+41 files in other folders)
