[package]
name = "anki-webapp"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# Workspace dependencies - Anki core
anki.workspace = true
anki_i18n.workspace = true
anki_proto.workspace = true

# Workspace dependencies - Web server
axum.workspace = true
axum-client-ip.workspace = true
axum-extra.workspace = true
tokio.workspace = true
tower-http.workspace = true

# Workspace dependencies - Serialization
serde.workspace = true
serde_json.workspace = true
prost.workspace = true

# Workspace dependencies - Error handling
anyhow.workspace = true
snafu.workspace = true

# Workspace dependencies - Utilities
tracing.workspace = true
tracing-subscriber.workspace = true

# Additional dependencies for webapp
jsonwebtoken = "9.2"
argon2 = { version = "0.5", features = ["std"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono.workspace = true
toml = "0.8"
rusqlite.workspace = true

[dev-dependencies]
tokio.workspace = true
tower = { version = "0.5", features = ["util"] }
tempfile = "3.8"

[[bin]]
name = "anki-webapp"
path = "src/main.rs"

[lib]
name = "anki_webapp"
path = "src/lib.rs"
