[package]
name = "anki-webapp"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# Workspace dependencies - Anki core
anki.workspace = true
anki_i18n.workspace = true
anki_proto.workspace = true

# Workspace dependencies - Web server
axum.workspace = true
axum-client-ip.workspace = true
axum-extra.workspace = true
tokio.workspace = true
tower-http.workspace = true

# Workspace dependencies - Serialization
prost.workspace = true
serde.workspace = true
serde_json.workspace = true

# Workspace dependencies - Error handling
anyhow.workspace = true
snafu.workspace = true

# Workspace dependencies - Utilities
tracing.workspace = true
tracing-subscriber.workspace = true
regex.workspace = true

# Additional dependencies for webapp
argon2 = { version = "0.5", features = ["std"] }
chrono.workspace = true
jsonwebtoken = "9.2"
mime_guess = "2.0"
rusqlite.workspace = true
toml = "0.8"
uuid = { version = "1.6", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.8"
tokio.workspace = true
tower = { version = "0.5", features = ["util"] }

[[bin]]
name = "anki-webapp"
path = "src/main.rs"

[lib]
name = "anki_webapp"
path = "src/lib.rs"
